--- a/src/Common/Common.vcxproj.filters
+++ b/src/Common/Common.vcxproj.filters
@@ -81,7 +81,7 @@
     <ClInclude Include="..\xrCommon\xr_deque.h">
       <Filter>xrCommon</Filter>
     </ClInclude>
-    <ClInclude Include="xr_impexp_macros.h">
+    <ClInclude Include="ImportExportMacros.inl">
       <Filter>Platform</Filter>
     </ClInclude>
   </ItemGroup>
